--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,27 +5,33 @@ services:
   app:
     build: .
     environment:
-      DB_HOST: 72.56.12.15
+      DB_HOST: db
       DB_PORT: 5432
-      DB_NAME: tasks
+      DB_NAME: db_tarea
       DB_USER: postgres
       DB_PASSWORD: mysecretpassword
     ports:
-      - "5002:5000"
+      - 5002:5000
     networks:
       - web
     depends_on:
       - db
+    volumes:
+      - .:/opt/app
+    command: poetry run python3 -m flask --app app.py --debug run --host=0.0.0.0
 
   db:
     image: postgres:16
     environment:
       POSTGRES_PASSWORD: mysecretpassword
+    ports:
+      - 5432:5432
     networks:
       - web
     volumes:
       - ./database/:/docker-entrypoint-initdb.d/
-
+ 
+    
 networks:
   web:
     driver: bridge
