--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-        docker login --username Josue-Echeverria --password ${{ secrets.CR_TOKEN }} ghcr.io
-        docker build . --file Dockerfile --tag ghcr.io/Josue-Echeverria/tc01:latest
-        docker push ghcr.io/Josue-Echeverria/tc01:latest
+        docker login --username Josue-Echeverria --password-stdin ghcr.io
+        docker build . --file Dockerfile --tag ghcr.io/tco1-bd2/tc01:latest
+        docker push ghcr.io/tco1-bd2/tc01:latest
