--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,9 +13,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Leer versión
+      id: version
+      run: echo "::set-output name=version::$(cat version.txt)"
+      
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
         docker login --username Josue-Echeverria --password ${{ secrets.CR_TOKEN }} ghcr.io
-        docker build . --file Dockerfile --tag ghcr.io/josue-echeverria/tc01-bd2:latest
-        docker push ghcr.io/josue-echeverria/tc01-bd2:latest
+        docker build . --file Dockerfile --tag ghcr.io/josue-echeverria/tc01-bd2:${{ steps.version.outputs.version }}
+        docker push ghcr.io/josue-echeverria/tc01-bd2:${{ steps.version.outputs.version }}
