--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    
     - name: Leer versión
       id: version
       run: |
@@ -20,6 +23,7 @@ jobs:
         echo "::set-output name=version::$VERSION"
       
     - uses: actions/checkout@v3
+    
     - name: Build the Docker image
       run: |
         docker login --username Josue-Echeverria --password ${{ secrets.CR_TOKEN }} ghcr.io
