--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,4 +31,6 @@ jobs:
         docker push ghcr.io/josue-echeverria/tc01-bd2:${{ steps.version.outputs.version }}
         
     - name: Incrementar versión
-      run: bash increment_version.sh
+      run: |
+        chmod +x increment_version.sh
+        bash increment_version.sh
