--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,16 @@ services:
     networks:
       - web
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+        restart: true
+    restart: on-failure
+
     volumes:
       - .:/opt/app
     command: poetry run python3 -m flask --app app.py --debug run --host=0.0.0.0
 
-  db:
+db:
     image: postgres:16
     environment:
       POSTGRES_PASSWORD: mysecretpassword
@@ -30,7 +34,10 @@ services:
       - web
     volumes:
       - ./database/:/docker-entrypoint-initdb.d/
- 
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 7s
+      retries: 5
     
 networks:
   web:
