--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,12 +21,16 @@ jobs:
       run: |
         VERSION=$(cat version.txt)
         echo "::set-output name=version::$VERSION"
-      
-    - uses: actions/checkout@v3
+
+
+    - uses: hoverkraft-tech/compose-action@v0.0.0
     - name: Testing app
       run: |
         docker-compose up
-        docker compose exec app poetry run python -m unittest test-api -v
+        docker compose exec app poetry run python -m unittest test-api -vp
+        docker-compose down
+        
+    - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
         docker login --username Josue-Echeverria --password ${{ secrets.CR_TOKEN }} ghcr.io
