--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+    - name: Checkout  
+      uses: hoverkraft-tech/compose-action@v2.0.0
     
     - name: Leer versión
       id: version
@@ -23,7 +23,6 @@ jobs:
         echo "::set-output name=version::$VERSION"
 
 
-    - uses: hoverkraft-tech/compose-action@v0.0.0
     - name: Testing app
       run: |
         docker-compose up
