--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,13 +15,8 @@ jobs:
     steps:
     - name: Checkout  
       uses: hoverkraft-tech/compose-action@v2.0.0
-    
-    - name: Leer versión
-      id: version
-      run: |
-        VERSION=$(cat version.txt)
-        echo "::set-output name=version::$VERSION"
-
+      with:
+        compose-file: "./docker-compose.yml"
 
     - name: Testing app
       run: |
@@ -29,6 +24,13 @@ jobs:
         docker compose exec app poetry run python -m unittest test-api -vp
         docker-compose down
         
+    
+    - name: Leer versión
+      id: version
+      run: |
+        VERSION=$(cat version.txt)
+        echo "::set-output name=version::$VERSION"
+
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
